--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "ant-design-vue": "^1.6.2",
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
+    "echarts": "^4.9.0",
     "enquire.js": "^2.1.6",
     "firebase": "^8.0.0",
+    "js-file-download": "^0.4.12",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
@@ -26,6 +28,7 @@
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "store": "^2.0.12",
+    "v-charts": "^1.19.0",
     "viser-vue": "^2.4.6",
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.2.1",
